fix: OEP65 publish to GitHub packages fixing lower dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@edx/react-unit-test-utils",
-  "version": "1.0.0-semantically-released",
+  "name": "@hammerlabs-net/react-unit-test-utils",
+  "version": "1.0.0-alpha",
   "description": "React toolkit for writing and testing react components",
   "main": "dist/index.js",
   "release": {
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openedx/react-unit-test-utils.git"
+    "url": "git+https://github.com/hammerlabs-net/react-unit-test-utils.git"
   },
   "homepage": "https://github.com/openedx/react-unit-test-utils#README",
   "browserslist": [
