--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   ],
   "dependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-platform": "4.6.0",
-    "@edx/paragon": "^20.44.0",
+    "@edx/frontend-platform": "^5.3.0",
+    "@edx/paragon": "^21.1.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "12.8.38",
+    "@edx/frontend-build": "^12.9.10",
     "axios": "^1.4.0",
     "es-check": "^2.3.0",
     "husky": "2.7.0",
@@ -56,7 +56,7 @@
     "semantic-release": "^19.0.3"
   },
   "peerDependencies": {
-    "@edx/frontend-build": ">=8.1.0",
+    "@edx/frontend-build": "^12.9.10",
     "react": "^16.9.0 || ^17.0.0"
   }
 }
